# youtube-empire

./: .env.example  .gitignore  CONTEXT.md  Dockerfile.backend  Dockerfile.frontend  EPISODE_BACKLOG.md  EPISODE_DEBRIEF_LOG.md  Home.md  Organization Map.md  PRODUCTION_SOP.md  README.md  SCRIPT_SOP.md  TOOLS_STATUS.md  VREAL_AI_METAPROMPT.md  agent_emails.csv  docker-compose.yml  ep001-full-team-production-run.md  ep001-script.json  ep001-the-shift-v10.md  index.html  produce_ep001.py  render.yaml  review.html  styles.css  trigger_make.py  vercel.json
.claude/: settings.json
.obsidian/: app.json  core-plugins.json  daily-notes.json  graph.json
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  agent.py  automation.py  memory.py  sandbox_task.py  thread.py  tool.py  tool_data.py
backend/app/routers/: automation.py  pipeline.py  sandbox.py  tasks.py  threads.py  tools.py  video_pipeline.py  webhooks.py
backend/app/schemas/: agent.py  automation.py  sandbox_task.py  thread.py
backend/app/services/: agent_loader.py  ai_media_generator.py  claude_service.py  managed_agents.py  managed_agents_service.py  notification_service.py  template_loader.py  video_assembler.py  video_service.py  youtube_service.py
backend/app/tools/: __init__.py  business_ops.py  communication.py  data_analytics.py  loader.py  memory.py  project_mgmt.py  registry.py
backend/bots/: discord_bot.py  telegram_bot.py
backend/scripts/: run_episode_01.py
backend/tests/: conftest.py  test_agent_loader.py  test_agents.py  test_threads.py
(+571 files in other folders)
