[project]
name = "youtube-empire-backend"
version = "0.1.0"
description = "YouTube Empire Multi-Agent Communication Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "python-socketio>=5.11.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
